update default logo
