# specs/v1/swagger-saral-apidoc.yaml
@@ -580,6 +580,20 @@ paths:
         "400":
           description: "unsuccessful operation"
 
+  /brand/default:
+    get:
+      tags:
+        - "Brand"
+      summary: "Get Default Brand"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/CreateBrandBody"
+        "404":
+          description: "Brand does not exist."
+  
+
 
 definitions:
   Schools:
